# book

./: .all-contributorsrc  .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-devel.txt  requirements.txt  setup.cfg  setup.py  versioneer.py
.github/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: autobuild.yml  autobuild_action.yml  autobuild_other.yml  codespell.yml  github-action.yml  linkcheck.yml
dataladhandbook_support/: __init__.py  _version.py  directives.py  roles.py
docs/: 01_dataset_basics_code.rst  404.rst  Makefile  OHBMposter.rst  acknowledgements.rst  book_appendix.rst  book_main.rst  conf.py  contents.rst.inc  contributing.rst  extension_create.rst  extension_pkgs.rst  glossary-dl.rst  glossary.rst  index.rst  licenses.rst  r.rst  teaching.rst  topic_index.rst
docs/_static/: custom.css
docs/_templates/: layout.html  page.html  sidebarintro.html  sidebarlogo.html
docs/basics/: 101-1-create.rst  101-10-run3.rst  101-101-create.rst  101-102-populate.rst  101-103-modify.rst  101-104-summary.rst  101-105-install.rst  101-106-nesting.rst  101-107-summary.rst  101-108-run.rst  101-109-rerun.rst  101-11-summary.rst  101-11-txt2git.rst  101-110-run2.rst  101-111-run3.rst  101-112-git2txt.rst  101-112-run4.rst  (+123 more)
tools/: bootstrap-handbook-user  install-singularity.sh  link_consolidator.py  rtd_analytics  setup-git-identity
(+986 files in other folders)
