[metadata]
url = https://github.com/datalad-handbook/book
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
license = MIT

python_requires = >= 3.5
install_requires =
    Sphinx >= 2
    sphinxcontrib-svg2pdfconverter
    sphinxcontrib-plantuml
    autorunrecord

include_package_data = True

[versioneer]
VCS = git
style = pep440
versionfile_source = dataladhandbook_support/_version.py
versionfile_build = dataladhandbook_support/_version.py
tag_prefix =
parentdir_prefix =
